QS/TC: Zitierung abgeändert

--- a/Documentation/Report/Literature.bib
+++ b/Documentation/Report/Literature.bib
@@ -1,3 +1,54 @@
 % This file was created with JabRef 2.9.2.
 % Encoding: UTF8
 
+@MISC{Apple14,
+  author = {Apple},
+  title = {iOS 7 Style Guide},
+  howpublished = {Website},
+  year = {2014},
+  owner = {moellers},
+  timestamp = {2014.03.16},
+  url = {https://developer.apple.com/library/ios/documentation/userexperience/conceptual/mobilehig/},
+  urldate = {16.03.2014 um 14:35 Uhr}
+}
+
+@MISC{Git14,
+  author = {Git},
+  title = {Git},
+  howpublished = {Website},
+  year = {2014},
+  owner = {moellers},
+  timestamp = {2014.03.16},
+  url = {http://git-scm.com/},
+  urldate = {23.02.2014 um 17:55 Uhr}
+}
+
+@MISC{GitHub14,
+  author = {GitHub},
+  title = {GitHub Web Presence},
+  howpublished = {Website},
+  year = {2014},
+  owner = {moellers},
+  timestamp = {2014.03.16},
+  url = {https://github.com/},
+  urldate = {23.02.2014 um 17:55 Uhr}
+}
+
+@BOOK{Institute08,
+  title = {A Guide to the Project Management Body of Knowledge},
+  year = {2008},
+  author = {Projekt Management Institute},
+  pages = {589},
+  address = {Newton Square},
+  edition = {Fifth Edition},
+  owner = {moellers},
+  timestamp = {2014.03.16}
+}
+
+@ARTICLE{svngit,
+  owner = {moellers},
+  timestamp = {2014.03.16},
+  url = {http://biz30.timedoctor.com/git-mecurial-and-cvs-comparison-of-svn-software/},
+  urldate = {23.02.2014 um 18:05 Uhr}
+}
+
