--- a/Documentation/Report/Parts/Qualitaetssicherung.tex
+++ b/Documentation/Report/Parts/Qualitaetssicherung.tex
@@ -1,5 +1,5 @@
 \authoredSection{corny}{Qualitätssicherung}
-	Für große Projekte wird es zunehmend unabdinglich, über Planung und Ausführung hinaus auch ein Monitoring und Controlling zu besitzen, auf welche ich in Form der Qualitätssicherung in diesem Abschnitt eingehen werde.\footnote{\textsc{Projekt Management Institute}: \textit{A Guide to the Project Management Body of Knowledge}. Fifth Edition. Newton Square, 2008. 589 Seiten.}
+	Für große Projekte wird es zunehmend unabdinglich, über Planung und Ausführung hinaus auch ein Monitoring und Controlling zu besitzen, auf welche ich in Form der Qualitätssicherung in diesem Abschnitt eingehen werde \cite{Institute08}.
 
 \subsection{Entwicklungsprozess}
 	Um Planungssicherheit zu haben benötigt man einen kontinuierlichen Prozess, damit man weiß, an wen welche Aufgaben zu verteilen sind und jeder Projektteilnehmer den Vorgangsablauf kennt. In unserem Fall war die Aufgabenverteilung bereits durch die T-Systems MMS anhand der Rollen Projektmanager, Konzepter, Berater und Entwickler vorgegeben, sodass wir uns auch versuchten, daran zu orientieren. 
@@ -7,7 +7,7 @@
 	Die Feingliederung unserer Arbeitsprozesse war wichtig für die Qualität der Entwicklung. Die effektive Arbeitsteilung half uns, sich auf den jeweiligen Bereich fokussieren zu können und mit entsprechender Kenntnis voranschreiten zu können. Auch wenn die Umsetzung der Prozesse nicht immer problemfrei ablief, so haben wir es doch geschafft, unsere beiden Hauptfeatures Finder und Self-Service nach unseren Wünschen umsetzen zu können.
 
 \subsection{Qualität des Designs}
-	Damit sichergestellt ist, dass wir ein konsistentes, qualitatives Design haben, versuchten wir uns grundlegend an den iOS7-Design-Richtlinien zu orientieren.\footnote{\url{https://developer.apple.com/library/ios/documentation/userexperience/conceptual/mobilehig/}} Da leider kein Mitglied von uns weitreichende Erfahrungen mit Design-Werkzeugen hatte, war die Umsetzung dieser zunächst schwierig. Insbesondere mangelte es noch am nötigen Feingefühl, im Sinne eines konsistenten Interaktionsdesigns vorzugehen. Zum Abschluss des Projekts wurden wir hier jedoch sicherer und experimentierten zunehmend mit eigenen Entwürfen.
+	Damit sichergestellt ist, dass wir ein konsistentes, qualitatives Design haben, versuchten wir uns grundlegend an den iOS7-Design-Richtlinien zu orientieren \cite{Apple14}. Da leider kein Mitglied von uns weitreichende Erfahrungen mit Design-Werkzeugen hatte, war die Umsetzung dieser zunächst schwierig. Insbesondere mangelte es noch am nötigen Feingefühl, im Sinne eines konsistenten Interaktionsdesigns vorzugehen. Zum Abschluss des Projekts wurden wir hier jedoch sicherer und experimentierten zunehmend mit eigenen Entwürfen.
 
 \subsection{Umgang mit Feedback}
 	Ein effektives Instrument zur Qualitätssicherung, dass uns im Projekt durch die Veranstalter zur Verfügung gestellt wurde, ist das Feedback von potentiellen Kunden. Umso mehr ist es für uns daher eine große Hilfe gewesen, dass auf Probleme und Wünsche bei der App in wöchentlichen Plenarveranstaltungen eingegangen wurde. Wir haben jedes Feedback umgehend in unserer Facebook-Gruppe dokumentiert und Lösungen ausdiskutiert.
