Meine Litrefs dazugemacht.

--- a/Documentation/Report/Literature.bib
+++ b/Documentation/Report/Literature.bib
@@ -12,6 +12,16 @@
   urldate = {16.03.2014 um 14:35 Uhr}
 }
 
+@MISC{Bain12,
+  author = {Bain and Company},
+  title = {Retail Banking: Die digitale Herausforderung},
+  month = {8},
+  year = {2012},
+  owner = {Michael},
+  timestamp = {2014.03.16},
+  url = {http://www.bain.de/Images/Retail\_Banking\_II\_Digitalisierung\_ES.pdf}
+}
+
 @MISC{Git14,
   author = {Git},
   title = {Git},
@@ -43,6 +53,27 @@
   edition = {Fifth Edition},
   owner = {moellers},
   timestamp = {2014.03.16}
+}
+
+@MISC{Welt14,
+  author = {Welt},
+  title = {Das ist ein Sterben auf Rate"},
+  howpublished = {Website},
+  year = {2014},
+  owner = {Michael},
+  timestamp = {2014.03.16},
+  url = {http://www.welt.de/print/wams/wirtschaft/article124228415/Das-ist-ein-Sterben-auf-Raten.html}
+}
+
+@MISC{Yelp14,
+  author = {Yelp},
+  title = {Yelp Web Presence},
+  howpublished = {website},
+  month = {1},
+  year = {2014},
+  owner = {Michael},
+  timestamp = {2014.03.16},
+  url = {http://www.yelp.de/}
 }
 
 @ARTICLE{svngit,
