--- a/Documentation/Report/Parts/Einleitung.tex
+++ b/Documentation/Report/Parts/Einleitung.tex
@@ -3,7 +3,7 @@
 	
 	Dieser sollte in Architektur und Gestaltung das Verständnis softwaretechnischer und interaktiver Konzepte deutlich machen, gleichzeitig aber geeignet sein, in einer konkreten Produktdemonstration im Projektabschluss praktischen Nutzen unter Beweis zu stellen. Zusätzlich wurden wir im Rahmen einer in das Projekt integrierten, einführenden Zertifizierung mit der Scrum-Methodik vertraut gemacht, welche dann als Grundlage für die Projektarbeit diente. 
 
-	Die unser Gruppe übertragene Aufgabe bestand darin, eine App zu entwickeln, welche die Bindung zwischen einer fiktiven Filialbank und ihren Kunden erhöht. In den ersten Überlegungen wurde deutlich, dass nahezu jede Dienstleistung einer Filiale auf die eine oder andere Weise von Direktbanken abgebildet werden kann. Nicht umsonst ist das Filialgeschäft im Abschwung \footnote{\url{http://www.welt.de/print/wams/wirtschaft/article124228415/Das-ist-ein-Sterben-auf-Raten.html}, \\Abruf am 23.02.2014 um 16:00 Uhr.}. Insofern bestand unsere besondere Herausforderung darin, einen Ausweg aus dieser strukturell schwierigen Lage zu finden.
+	Die unser Gruppe übertragene Aufgabe bestand darin, eine App zu entwickeln, welche die Bindung zwischen einer fiktiven Filialbank und ihren Kunden erhöht. In den ersten Überlegungen wurde deutlich, dass nahezu jede Dienstleistung einer Filiale auf die eine oder andere Weise von Direktbanken abgebildet werden kann. Nicht umsonst ist das Filialgeschäft im Abschwung \citep{Welt14}. Insofern bestand unsere besondere Herausforderung darin, einen Ausweg aus dieser strukturell schwierigen Lage zu finden.
 	
 	Im Bericht sollen nun zunächst in Kapitel 2 und 3 die Ideen und Diskussionen während der Konzeptphase und der Kontexterkundung deutlich gemacht werden. Mit Blick auf das Design werden dann in Abschnitt 4 unsere Mockups und UI-Elemente erläutert. In Teil 5 wird der Projektzeitraum noch einmal mit Blick auf die Vorgehensweisen, insbesondere Scrum, analysiert. Schließlich wird in Teil 6 und 7 ausführlich das Ergebnis in Aussehen und Funktion sowie auch im Bezug auf die Softwarearchitektur vorgestellt. Abschnitt 8 bespricht die verwendeten Software-Tools, also etwa die Versionsverwaltung und Designwerkzeuge. Der Bericht schließt mit einer Übersicht über die von uns eingesetzten Maßnahmen zur Qualitätssicherung in Kapitel 9 und einem kurzen Gesamtfazit in Kapitel 10.
 	 
