--- a/Documentation/Report/Parts/Idee.tex
+++ b/Documentation/Report/Parts/Idee.tex
@@ -1,7 +1,7 @@
 \authoredSection{michael}{App-Idee}
 
 \subsection{Problematik}
-	Mit Rücksicht auf oben genannte Aspekte haben wir uns in der Ideenfindungsphase auf Lokalität als entscheidendes Schlagwort konzentriert. Apps wie etwa Yelp\footnote{\url{http://www.yelp.de/}, Abruf am 23.02.2014 um 16:15 Uhr, siehe auch Abbildung \ref{fig:Yelp}}, welche Bezug auf lokale Unternehmen nehmen und Benutzern die Möglichkeit geben, sich darüber auszutauschen, sind beispielhaft für eine erfolgreiche Umsetzung dieses Konzepts.
+	Mit Rücksicht auf oben genannte Aspekte haben wir uns in der Ideenfindungsphase auf Lokalität als entscheidendes Schlagwort konzentriert. Apps wie etwa Yelp \citep{Yelp14}, welche Bezug auf lokale Unternehmen nehmen und Benutzern die Möglichkeit geben, sich darüber auszutauschen, sind beispielhaft für eine erfolgreiche Umsetzung dieses Konzepts (vgl. Abbildung 1).
 	
 	Für das Bankgeschäft ergab sich jedoch das Problem, dass die eigenen finanziellen Verhältnisse in den innersten persönlichen Lebensbereich fallen und in der Regel darüber zumindest weniger Austausch stattfindet als über Restaurants, Nachtclubs oder Freizeitaktivitäten. 
 
@@ -15,7 +15,7 @@
 
 	Allerdings, und hier haben wir die Chance unserer Anwendung gesehen, bedeutet die technische Möglichkeit eines Vertriebsweges nicht gleich, dass dieser auch angenommen wird. Eine von uns im Sinne einer Markterkundung durchgeführte Umfrage ergab ein gewisses Misstrauen gegenüber der Idee, Finanztransaktionen per App durchzuführen oder überhaupt eine Bank-App zu benutzen.
 	
-	Gründe hierfür könnten vielfältig sein; beispielsweise könnten die befragten Studenten am Informatikcampus eine besondere Sensibilität bezüglich Aspekten des Datenschutzes haben. Eine von der Unternehmensberatung „Bain and Company“ durchgeführte Studie zur Frage, wie digitalisierte Vertriebswege das Privatkundengeschäft der Banken zukünftig prägen könnten, ergab jedoch einen ähnlichen Tenor\footnote{\url{http://www.bain.de/Images/Retail\_Banking\_II\_Digitalisierung\_ES.pdf}, Abruf am 23.02.2014 um 16:30 Uhr.}. Insbesondere ergab die Studie, dass für Geldanlagen dem persönlichen Gespräch der Vorzug vor digitaler Beratung gegeben würde. Somit könnte es trotz aller technischen Möglichkeiten auch langfristig noch einen Markt für persönliche Beratung von Angesicht zu Angesicht geben.
+	Gründe hierfür könnten vielfältig sein; beispielsweise könnten die befragten Studenten am Informatikcampus eine besondere Sensibilität bezüglich Aspekten des Datenschutzes haben. Eine von der Unternehmensberatung „Bain and Company“ durchgeführte Studie zur Frage, wie digitalisierte Vertriebswege das Privatkundengeschäft der Banken zukünftig prägen könnten, ergab jedoch einen ähnlichen Tenor \citep{Bain12}. Insbesondere ergab die Studie, dass für Geldanlagen dem persönlichen Gespräch der Vorzug vor digitaler Beratung gegeben würde. Somit könnte es trotz aller technischen Möglichkeiten auch langfristig noch einen Markt für persönliche Beratung von Angesicht zu Angesicht geben.
  
 \subsection{Vision}
 	Schließlich entstand die Vision einer Anwendung, die nicht versucht, aus einer Filialbank eine Direktbank mit Filialen als Zusatzangebot zu machen, sondern die die bestehenden Produkte des Filialgeschäfts dem Kunden näher bringt und ihm Grund gibt, in eine Filiale zu gehen. 
@@ -23,7 +23,7 @@
 	Als Kernprodukte und Kompetenzen haben wir das klassische Sparbuch, die Anlageberatung sowie die Finanzierung ausgemacht. Das Sparbuch bietet scheinbar keine Funktionalität, die einen konkreten Vorteil gegenüber beispielsweise dem Tagesgeldkonto einer Direktbank hätte. Wie aber einführend erläutert, ist dies nicht ausschlaggebend. Denn ungeachtet seiner Nachteile ist das Sparbuch populär; vielleicht auch, weil in den Verwerfungen der europäischen Finanzkrise hier besondere Sicherheit vermutet wird. Diesem Sicherheitsbedürfnis der Kunden wollten wir dabei konsequent nicht nur Architektur, sondern auch mit Rücksicht auf die vom Kunden wahrgenommene Sicherheit gerecht werden – etwa durch visuelle Elemente, die mit Sicherheit assoziiert werden.
 
 	In den nächsten Abschnitten wird nun erläutert werden, welche Funktionen wir uns in Konsequenz überlegt haben und mit welchen Use-Cases diese korrespondieren.
-
+\newpage
 \subsection{Name}
     Der Name der App, „\textbf{K}i\textbf{B}a“, steht – in Anlehnung an eine bekannte Direktbank – ,für eine kundeninteressierte Bank, die mit der Anwendung mehr über ihre Kunden erfahren möchte und mit ihnen in Austausch treten will, um spezifischere Angebote und Beratungen anbieten zu können.
     
