--- a/Documentation/Report/Literature.bib
+++ b/Documentation/Report/Literature.bib
@@ -13,7 +13,7 @@
 }
 
 @MISC{Bain12,
-  author = {Bain and Company},
+  author = {Bain},
   title = {Retail Banking: Die digitale Herausforderung},
   month = {8},
   year = {2012},
@@ -68,7 +68,7 @@
 @MISC{Yelp14,
   author = {Yelp},
   title = {Yelp Web Presence},
-  howpublished = {website},
+  howpublished = {Website},
   month = {1},
   year = {2014},
   owner = {Michael},
