--- a/Documentation/Report/Parts/Einleitung.tex
+++ b/Documentation/Report/Parts/Einleitung.tex
@@ -1,5 +1,5 @@
 \authoredSection{michael}{Einleitung und Projektkontext}
-	Dieser Bericht ist eine Zusammenfassung unserer Ergebnisse im "Projekt Objektorientierte Softwareentwicklung", bei dem über ein Semester hinweg in Kooperation mit der T-Systems MMS eine iOS-Anwendung entwickelt wurde. Die Herausforderung war dabei, universitäre Erfordernisse mit kommerziellen Anforderungen in Einklang zu bringen. Ziel war es, anhand einer gegebenen Aufgabenstellung in Gruppen mit universitär heterogenem Hintergrund einen Prototypen zu entwickeln.
+	Dieser Bericht ist eine Zusammenfassung unserer Ergebnisse im „Projekt Objektorientierte Softwareentwicklung", bei dem über ein Semester hinweg in Kooperation mit der T-Systems MMS eine iOS-Anwendung entwickelt wurde. Die Herausforderung war dabei, universitäre Erfordernisse mit kommerziellen Anforderungen in Einklang zu bringen. Ziel war es, anhand einer gegebenen Aufgabenstellung in Gruppen mit universitär heterogenem Hintergrund einen Prototypen zu entwickeln.
 	
 	Dieser sollte in Architektur und Gestaltung das Verständnis softwaretechnischer und interaktiver Konzepte deutlich machen, gleichzeitig aber geeignet sein, in einer konkreten Produktdemonstration im Projektabschluss praktischen Nutzen unter Beweis zu stellen. Zusätzlich wurden wir im Rahmen einer in das Projekt integrierten, einführenden Zertifizierung mit der Scrum-Methodik vertraut gemacht, welche dann als Grundlage für die Projektarbeit diente. 
 
