--- a/Documentation/Report/Literature.bib
+++ b/Documentation/Report/Literature.bib
@@ -15,21 +15,43 @@
 @MISC{Bain12,
   author = {Bain},
   title = {Retail Banking: Die digitale Herausforderung},
-  month = {8},
+  month = aug,
   year = {2012},
   owner = {Michael},
   timestamp = {2014.03.16},
-  url = {http://www.bain.de/Images/Retail\_Banking\_II\_Digitalisierung\_ES.pdf}
+  url = {http://www.bain.de/Images/Retail_Banking_II_Digitalisierung_ES.pdf},
+  urldate = {18.03.2014 um 01:00 Uhr}
+}
+
+@MISC{Balsamiq14,
+  author = {Balsamiq},
+  title = {Why Balsamiq Mockups for wireframing?},
+  howpublished = {Website},
+  year = {2014},
+  owner = {moellers},
+  timestamp = {2014.03.18},
+  url = {http://balsamiq.com/products/mockups/},
+  urldate = {23.02.2014 um 18:50 Uhr}
+}
+
+@MISC{TimeDoctor11,
+  author = {{Biz 3.0}},
+  title = {SVN, Git, Mercurial, and CVS – Comparison of Version Control Software},
+  year = {2011},
+  owner = {moellers},
+  timestamp = {2014.03.16},
+  url = {http://biz30.timedoctor.com/git-mecurial-and-cvs-comparison-of-svn-software/},
+  urldate = {23.02.2014 um 18:05 Uhr}
 }
 
 @MISC{Git14,
   author = {Git},
-  title = {Git},
+  title = {About},
   howpublished = {Website},
   year = {2014},
   owner = {moellers},
   timestamp = {2014.03.16},
-  url = {http://git-scm.com/},
+  url = {http://git-scm.com/about},
   urldate = {23.02.2014 um 17:55 Uhr}
 }
 
@@ -44,10 +66,31 @@
   urldate = {23.02.2014 um 17:55 Uhr}
 }
 
-@BOOK{Institute08,
+@ARTICLE{Jenkov14,
+  author = {Jenkov, Jakob},
+  title = {What is Dependency Injection?},
+  year = {2014},
+  owner = {moellers},
+  timestamp = {2014.03.18},
+  url = {http://tutorials.jenkov.com/dependency-injection/index.html},
+  urldate = {18.03.2014 um 01:15 Uhr}
+}
+
+@MISC{Podsedly12,
+  author = {Podsedly, Dan},
+  title = {Velocity Matters},
+  month = aug,
+  year = {2012},
+  owner = {moellers},
+  timestamp = {2014.03.18},
+  url = {http://www.pivotaltracker.com/community/tracker-blog/velocity-matters},
+  urldate = {23.02.2014 um 18:00 Uhr}
+}
+
+@BOOK{PMI08,
   title = {A Guide to the Project Management Body of Knowledge},
   year = {2008},
-  author = {Projekt Management Institute},
+  author = {{Projekt Management Institute}},
   pages = {589},
   address = {Newton Square},
   edition = {Fifth Edition},
@@ -55,31 +98,48 @@
   timestamp = {2014.03.16}
 }
 
+@MISC{Tutorialspoint14,
+  author = {Tutorialspoint},
+  title = {Basic MVC Architecture},
+  year = {2014},
+  owner = {moellers},
+  timestamp = {2014.03.18},
+  url = {http://www.tutorialspoint.com/struts_2/basic_mvc_architecture.htm},
+  urldate = {18.03.2014 um 01:00 Uhr}
+}
+
+@MISC{Wang14,
+  author = {Wang, Wei},
+  title = {{VVDocumenter-Xcode}},
+  howpublished = {GitHub-Projekt},
+  month = feb,
+  year = {2014},
+  owner = {moellers},
+  timestamp = {2014.03.18},
+  url = {https://github.com/onevcat/VVDocumenter-Xcode},
+  urldate = {18.03.2014 um 01:30 Uhr}
+}
+
 @MISC{Welt14,
   author = {Welt},
-  title = {Das ist ein Sterben auf Rate"},
+  title = {Das ist ein Sterben auf Rate},
   howpublished = {Website},
   year = {2014},
   owner = {Michael},
   timestamp = {2014.03.16},
-  url = {http://www.welt.de/print/wams/wirtschaft/article124228415/Das-ist-ein-Sterben-auf-Raten.html}
+  url = {http://www.welt.de/print/wams/wirtschaft/article124228415/Das-ist-ein-Sterben-auf-Raten.html},
+  urldate = {18.03.2014 um 01:00 Uhr}
 }
 
 @MISC{Yelp14,
   author = {Yelp},
   title = {Yelp Web Presence},
   howpublished = {Website},
-  month = {1},
+  month = jan,
   year = {2014},
   owner = {Michael},
   timestamp = {2014.03.16},
-  url = {http://www.yelp.de/}
-}
-
-@ARTICLE{svngit,
-  owner = {moellers},
-  timestamp = {2014.03.16},
-  url = {http://biz30.timedoctor.com/git-mecurial-and-cvs-comparison-of-svn-software/},
-  urldate = {23.02.2014 um 18:05 Uhr}
+  url = {http://www.yelp.de/},
+  urldate = {18.03.2014 um 01:00 Uhr}
 }
 
