--- a/Documentation/Report/Literature.bib
+++ b/Documentation/Report/Literature.bib
@@ -87,6 +87,69 @@
   urldate = {23.02.2014 um 18:00 Uhr}
 }
 
+@MISC{NYStyleGuide14,
+  author = {The New York Times},
+  title = {NYTimes Objective-C Style Guide},
+  year = {2014},
+  howpublished = {Website},
+  owner = {moellers},
+  timestamp = {2014.03.18},
+  url = {https://github.com/NYTimes/objective-c-style-guide},
+  urldate = {18.03.2014 um 11:27 Uhr}
+}
+
+@MISC{GitHubIssues14,
+  author = {Kyle Neath},
+  title = {Issues 2.0: The Next Generation},
+  year = {2011},
+  howpublished = {Website},
+  owner = {alex},
+  timestamp = {2014.03.18},
+  url = {https://github.com/blog/831-issues-2-0-the-next-generation},
+  urldate = {18.03.2014 um 11:27 Uhr}
+}
+
+@MISC{GitHubFeatures14,
+  author = {GitHub},
+  title = {GitHub - Features},
+  year = {2014},
+  howpublished = {Website},
+  owner = {alex},
+  timestamp = {2014.03.18},
+  url = {https://github.com/features},
+  urldate = {18.03.2014 um 11:27 Uhr}
+}
+
+@MISC{ScrumGuideIntro14,
+  author = {Ken Schwaber, Jeff Sutherland},
+  title = {The Scrum Guide},
+  year = {2013},
+  howpublished = {Website},
+  owner = {alex},
+  timestamp = {2014.03.18},
+  url = {https://www.scrum.org/Portals/0/Documents/Scrum%20Guides/Scrum_Guide.pdf},
+  urldate = {18.03.2014 um 11:27 Uhr}
+}
+
+@MISC{ScrumGuideFull14,
+  author = {Kenneth S. Rubin},
+  title = {Essential Scrum},
+  pages = {195},
+  year = {2012},
+  howpublished = {Buch},
+  owner = {alex},
+}
+
+@MISC{PivotalTracker14,
+  author = {PivotalTracker},
+  title = {PivotalTracker - How it works},
+  year = {2014},
+  owner = {moellers},
+  timestamp = {2014.03.18},
+  url = {https://www.pivotaltracker.com/why-tracker/how-it-works},
+  urldate = {18.03.2014 um 11:27 Uhr}
+}
+
 @BOOK{PMI08,
   title = {A Guide to the Project Management Body of Knowledge},
   year = {2008},
